--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "devDependencies": {
+    "@astrojs/mdx": "^0.11.4",
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^2.0.2",
     "@fontsource/lexend-deca": "^4.5.11",
