--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lanceross-xyz",
+  "name": "lanceross.xyz",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -18,6 +18,9 @@
     "astro-compress": "1.0.8",
     "astro-icon": "^0.7.3",
     "tailwind-scrollbar": "^2.0.1",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "@resvg/resvg-js": "^2.1.0",
+    "satori": "^0.0.43",
+    "satori-html": "^0.3.0"
   }
 }
