--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "astro-compress": "1.0.8",
     "astro-icon": "^0.7.3",
     "tailwind-scrollbar": "^2.0.1",
-    "tailwindcss": "^3.1.8",
-    "@resvg/resvg-js": "^2.1.0",
+    "tailwindcss": "^3.1.8"
+  },
+  "dependencies": {
     "satori": "^0.0.43",
-    "satori-html": "^0.3.0"
+    "satori-html": "^0.3.0",
+    "@resvg/resvg-js": "^2.1.0"
   }
 }
