--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "astro": "^1.5.0",
     "astro-compress": "1.0.8",
     "astro-icon": "^0.7.3",
+    "astro-layouts": "0.0.6",
     "tailwind-scrollbar": "^2.0.1",
     "tailwindcss": "^3.1.8"
   }
