--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@astrojs/image": "^0.11.2",
     "@astrojs/mdx": "^0.11.4",
+    "@astrojs/rss": "^1.0.3",
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^2.0.2",
     "@fontsource/inter": "^4.5.14",
