--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "astro dev",
+    "start": "astro dev",
     "build": "astro build",
-    "preview": "astro build && astro preview",
+    "preview": "astro preview",
+    "build:preview": "astro build && astro preview",
+    "format": "prettier -w --plugin-search-dir=. 'src/**/*.{js,jsx,ts,tsx,astro}'",
+    "monthly": "tsm scripts/projects.ts",
     "astro": "astro"
   },
   "devDependencies": {
