--- a/src/content/projects.json
+++ b/src/content/projects.json
@@ -1,14 +1,20 @@
 [
   {
-    "title": "og-edge-netlify",
-    "githubUrl": "https://github.com/lancerossdev/og-edge-netlify",
-    "description": "An OG Image Generator running on Netlify Edge Functions.",
-    "technologies": ["TypeScript", "React", "Netlify"]
+    "title": "lanceross.xyz",
+    "description": "My blazingly fast website made with Astro.",
+    "githubUrl": "https://github.com/lancerossdev/lanceross.xyz",
+    "technologies": [
+      "Astro",
+      "TypeScript"
+    ]
   },
   {
     "title": "astro-basic-blog",
-    "githubUrl": "https://github.com/lancerossdev/astro-basic-blog",
     "description": "A fully-responsive basic blog theme made with Astro.",
-    "technologies": ["Astro", "Tailwind CSS", "MDX"]
+    "githubUrl": "https://github.com/lancerossdev/astro-basic-blog",
+    "technologies": [
+      "Astro",
+      "TypeScript"
+    ]
   }
 ]
