--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "@astrojs/tailwind": "^2.1.3",
     "@fontsource/inter": "^4.5.14",
     "@tailwindcss/typography": "^0.5.8",
-    "astro": "^1.6.11",
+    "astro": "^1.6.12",
     "astro-compress": "1.0.8",
     "astro-icon": "^0.7.3",
     "astro-layouts": "0.0.6",
     "node-fetch": "^3.3.0",
     "prettier-plugin-astro": "^0.7.0",
+    "sharp": "^0.31.2",
     "tailwind-scrollbar": "^2.0.1",
     "tailwindcss": "^3.2.4",
     "tsm": "^2.3.0"
