--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {
     "@astrojs/image": "^0.11.6",
     "@astrojs/mdx": "^0.11.6",
-    "@astrojs/rss": "^1.1.0",
+    "@astrojs/rss": "1.0.3",
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^2.1.3",
     "@fontsource/inter": "^4.5.14",
