--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,8 @@ pnpm-debug.log*
 # macOS-specific files
 .DS_Store
 
-# netlify specific files
-.netlify
+# vercel specific files
+.vercel
 
 # we use pnpm for package management
 package-lock.json
