--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
       "@components/*": ["src/components/*"],
       "@layouts/*": ["src/layouts/*"],
       "@content/*": ["src/content/*"],
-      "@images/*": ["src/images/*"]
+      "@images/*": ["src/images/*"],
+      "@scripts/*": ["src/scripts/*"],
     }
   }
 }
