--- a/vercel.json
+++ b/vercel.json
@@ -2,23 +2,5 @@
   "github": {
     "silent": true
   },
-  "cleanUrls": true,
-  "redirects": [
-    {
-      "source": "/blog/:slug*",
-      "destination": "https://blog.lanceross.xyz/blog/:slug*"
-    },
-    {
-      "source": "/blog/:slug*/",
-      "destination": "https://blog.lanceross.xyz/blog/:slug*/"
-    },
-    {
-      "source": "/blog",
-      "destination": "https://blog.lanceross.xyz/blog"
-    },
-    {
-      "source": "/blog/",
-      "destination": "https://blog.lanceross.xyz/blog/"
-    }
-  ]
+  "cleanUrls": true
 }
