--- a/package.json
+++ b/package.json
@@ -15,16 +15,20 @@
   },
   "devDependencies": {
     "@astrojs/image": "^0.11.6",
+    "@astrojs/mdx": "^0.13.0",
+    "@astrojs/rss": "^1.2.1",
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^2.1.3",
     "@fontsource/inter": "^4.5.14",
+    "@fontsource/jetbrains-mono": "^4.5.11",
+    "@tailwindcss/typography": "^0.5.8",
     "astro": "^1.7.1",
     "astro-compress": "1.0.8",
     "astro-icon": "^0.7.3",
+    "astro-layouts": "^0.1.1",
     "node-fetch": "^3.3.0",
     "prettier-plugin-astro": "^0.7.0",
     "sharp": "^0.31.2",
-    "tailwind-scrollbar": "^2.0.1",
     "tailwindcss": "^3.2.4",
     "tsm": "^2.3.0"
   }
