--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "astro-layouts": "^0.1.1",
     "node-fetch": "^3.3.0",
     "prettier-plugin-astro": "^0.7.0",
+    "remark-code-title": "^0.2.2",
     "sharp": "^0.31.2",
     "tailwindcss": "^3.2.4",
     "tsm": "^2.3.0"
