--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@astrojs/rss": "^1.2.1",
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^2.1.3",
+    "@fontsource/fira-code": "^4.5.12",
     "@fontsource/inter": "^4.5.14",
-    "@fontsource/jetbrains-mono": "^4.5.11",
     "@tailwindcss/typography": "^0.5.9",
     "astro": "^1.9.2",
     "astro-compress": "1.0.8",
