--- a/package.json
+++ b/package.json
@@ -1,36 +1,19 @@
 {
-  "name": "web",
-  "version": "1.0.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "build:preview": "astro build && astro preview",
-    "format": "prettier -w --plugin-search-dir=. 'src/**/*.{js,jsx,ts,tsx,astro}'",
-    "monthly": "tsm scripts/projects.ts",
-    "astro": "astro"
-  },
-  "devDependencies": {
-    "@astrojs/image": "^0.11.6",
-    "@astrojs/mdx": "^0.13.0",
-    "@astrojs/rss": "^1.2.1",
-    "@astrojs/sitemap": "^1.0.0",
-    "@astrojs/tailwind": "^2.1.3",
-    "@fontsource/fira-code": "^4.5.13",
-    "@fontsource/inter": "^4.5.15",
-    "@tailwindcss/typography": "^0.5.9",
-    "astro": "^1.9.2",
-    "astro-compress": "1.0.8",
-    "astro-icon": "^0.7.3",
-    "astro-layouts": "^0.1.1",
-    "node-fetch": "^3.3.0",
-    "prettier-plugin-astro": "^0.7.2",
-    "remark-code-title": "^0.2.2",
-    "sharp": "^0.31.3",
-    "tailwindcss": "^3.2.4",
-    "tsm": "^2.3.0"
-  }
+	"name": "odyssey-theme",
+	"version": "2.0.2",
+	"private": false,
+	"repository": {
+		"type": "git",
+		"url": "git@github.com:littlesticksdev/odyssey-theme"
+	},
+	"scripts": {
+		"dev": "astro dev",
+		"start": "astro dev",
+		"build": "astro build",
+		"preview": "astro preview",
+		"format": "npx prettier -w ."
+	},
+	"dependencies": {
+		"astro": "^2.7.4"
+	}
 }
